# Dragonfly

./: .gitignore  .gitmodules  CMakeLists.txt  CmakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: stm32_toolchain.cmake
linker/: stm32f401.ld
src/: main.c
src/hal/include/: i2c.h  uart.h
src/hal/src/: i2c.c  uart.c
src/startup/: startup_stm32f401.c
